[package]
authors = ["Jeff Muizelaar <jmuizelaar@mozilla.com>"]
name = "adobe-cmap-parser"
version = "0.3.5"
license = "MIT"
documentation = "https://docs.rs/crate/adobe-cmap-parser/"
description = "A library to parse Adobe CMap files"
keywords = ["cmap", "font", "pdf", "postscript"]
repository = "https://github.com/jrmuizel/adobe-cmap-parser"
include = ["src/lib.rs"]

[dependencies]
pom = "1.0.1"
